# ynab-autosplit

./: .gitignore  .pre-commit-config.yaml  .releaserc  Dockerfile  README.md  main.py  package-lock.json  package.json  pyproject.toml
.github/workflows/: build-image.yml  release.yml  tests.yml  verify-and-release.yml
tests/: test_main.py
