[project]
name = "partner-split-for-ynab"
dynamic = ["version"]
description = "A background worker that automatically syncs shared credit card expenses to an IOU account in YNAB."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ynab>=4.1.0",
]
[tool.ruff]
line-length = 88

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
    "pytest>=9.0.0",
    "ruff>=0.15.20",
]
